# RayMob

./: README.md  gradle.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/game/: admob.c  admob.h  main.c
app/src/main/cpp/raylib/: android_native_app_glue.h  raylib.h
app/src/main/java/com/bigfoot/raymob/: NativeLoader.java
app/src/main/res/values/: strings.xml  styles.xml
gradle/wrapper/: gradle-wrapper.properties
